 - Add: Supply chains that stall send a message

3.0860:
 - Fix: Scows deliver the amount of waste in their payload, not capacity.
 - Fix: Space Station Command accessible via UI.
 - Fix: Updated API Docs for Trade, Archaeology, PCC, and SCC.
 - Add: Record each Empire's daily RPC use and RPC-throttles for later 'name and shame' reports

4.0001:
 - Add: Major reworking of ships into fleets.
 - Mod: A fleet is a collection of ships all having the same attributes and task
 - Mod: Where previously you referred to a single ship, you now refer to a collection
 - Mod: Most API calls involving ships have changed, if you use external scripts these will most likely need to be modified.
 - Mod: The maximum level of Shipyard on a colony is now used in calculating a new ships attributes, not the current Shipyard
 - Mod: 'own' and 'ally' on the incoming report for a Space Station now are in relation to your own empire.
 - Fix: Fleets sort correctly in type/name order in Space Port view tab
 - Mod: You can now see all details of incoming allied ships in the Space Port incoming tab.
 - Mod: You can now see details of incoming allied ships on the Star Map planet/star incoming tab
 - Mod: You can now see details (subject to the local Space Port level) of incoming foreign ships on the Star Map planet incoming tab for allied planets or Space Stations

3.0859:
 - Mod: Web UI, arch min has better display of glyphs, can produce multiple plans in one go
 - Mod: Spies now have a higher chance of stealing or destroying a 'useful' plan
 - Mod: Spies may now steal or destroy more than one plan of a type
 - Mod: Missions that require a plan, now take the lowest level/extra that meet the criteria
 - Mod: Improved efficiency on planets with lots of glyphs and plans

3.0858:
 - Add: Resources per hour for all food/ore types now shown in PCC and SCC
 - Add: PCC and SCC now show all incoming supply chains
 - Fix: Planet plan and starmap should now scroll correctly in IE9