@@ -25,40 +25,62 @@ my $result;
 
 my $test_shipyard   = $test_home->shipyard;
 
+# remove some ships so we know we have space to build more
+my ($fleet) = $test_home->fleets->search({ task => 'Docked'},{ order_by => { -desc => 'quantity'}});
+my $fleet_type = 'sweeper';
+my $fleet_quantity = '20';
+if ($fleet) {
+    diag("Deleting ".$fleet->quantity." ships of type ".$fleet->type);
+    $fleet_type     = $fleet->type;
+    $fleet->delete;
+};
+
 $result = $tester->post('shipyard','view', [{
-    session     => $test_session_id,
-    building    => $test_shipyard->id,
+    session_id  => $test_session_id,
+    building_id => $test_shipyard->id,
     no_status   => 1,
 }]);
 
 $result = $tester->post('shipyard', 'view_build_queue', [{
-    session     => $test_session_id, 
-    building    => $test_shipyard->id,
+    session_id  => $test_session_id, 
+    building_id => $test_shipyard->id,
     no_status   => 1,
 }]);
 
 $result = $tester->post('shipyard', 'subsidize_build_queue', [{
-    session     => $test_session_id, 
-    building    => $test_shipyard->id,
+    session_id  => $test_session_id, 
+    building_id => $test_shipyard->id,
     no_status   => 1,
 }]);
 
 $result = $tester->post('shipyard', 'get_buildable', [{
-    session     => $test_session_id, 
-    building    => $test_shipyard->id,
+    session_id  => $test_session_id, 
+    building_id => $test_shipyard->id,
     no_status   => 1,
 }]);
 
 $result = $tester->post('shipyard', 'get_buildable', [{
-    session     => $test_session_id, 
-    building    => $test_shipyard->id, 
+    session_id  => $test_session_id, 
+    building_id => $test_shipyard->id, 
     tag         => 'Trade',
     no_status   => 1,
 }]);
 
-#$result = $tester->post('spaceport','view', [$test_session_id, $test_spaceport->id]);
+$result = $tester->post('shipyard', 'build_fleet', [{
+    session_id  => $test_session_id,
+    building_id => $test_shipyard->id,
+    type        => $fleet_type,
+    quantity    => $fleet_quantity,
+    no_status   => 1,
+}]);
+is($result->{result}{fleets_building}, 1, "One fleet building");
 
-
+$result = $tester->post('shipyard', 'subsidize_build_queue', [{
+    session_id  => $test_session_id,
+    building_id => $test_shipyard->id,
+    no_status   => 1,
+}]);
+            
 done_testing;
 
 END {
